--- a/ex_capitais/pyproject.toml
+++ b/ex_capitais/pyproject.toml
@@ -4,4 +4,13 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "zeep>=4.3.2",
+]
+
+[dependency-groups]
+dev = [
+    "ipykernel>=6.30.1",
+    "ipywidgets>=8.1.7",
+    "tqdm>=4.67.1",
+]
